--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "scripts": {
     "start": "nodemon ./src/server.js"
   },
+  "dependencies": {
+    "express": "^4.18.1"
+  },
   "devDependencies": {
-    "express": "^4.18.1",
     "nodemon": "^2.0.19"
   }
 }
